media/asciidoctor-editor.css
/* ... */
table tr th,
table tr td {
  padding: .5625em .625em;
  font-size: inherit;
  /* DISABLED color: rgba(0, 0, 0, .8) */
}

/* DISABLED table tr.even,
table tr.alt {
  background: #f8f8f7
} */

table thead tr th,
table tfoot tr th,
table tbody tr td,
table tr td,
table tfoot tr td {
  display: table-cell;
  line-height: var(--asciidoc-line-height, 1.6);
}

h1,
h2,
h3,
#toctitle,
.sidebarblock>.content>.title,
h4,
h5,
h6 {
  line-height: calc(var(--asciidoc-line-height, 1.6) * 0.75);
  word-spacing: -.05em
}

h1 strong,
h2 strong,
h3 strong,
#toctitle strong,
.sidebarblock>.content>.title strong,
h4 strong,
h5 strong,
h6 strong {
  font-weight: 400
}

.clearfix::before,
.clearfix::after,
.float-group::before,
.float-group::after {
  content: " ";
  display: table
}

.clearfix::after,
.float-group::after {
  clear: both
}

:not(pre):not([class^=L])>code {
  font-size: .9375em;
  font-style: normal !important;
  letter-spacing: 0;
  padding: .1em .5ex;
  word-spacing: -.15em;
  /* DISABLED background: #f7f7f8; */
  border-radius: 4px;
  line-height: calc(var(--asciidoc-line-height, 1.6) * 0.9);
  text-rendering: optimizeSpeed;
  word-wrap: break-word
}

:not(pre)>code.nobreak {
  word-wrap: normal
}

:not(pre)>code.nowrap {
  white-space: nowrap
}

pre {
  /* DISABLED color: rgba(0, 0, 0, .9); */
  /* DISABLED font-family: "Droid Sans Mono", "DejaVu Sans Mono", monospace; */
  font-family: monospace;
  line-height: calc(var(--asciidoc-line-height, 1.6) * 0.9);
  text-rendering: optimizeSpeed
}

pre code,
pre pre {
  /* DISABLED color: inherit; */
  font-size: inherit;
  line-height: inherit
}

pre>code {
  display: block
}

pre.nowrap,
pre.nowrap pre {
  white-space: pre;
  word-wrap: normal
}

em em {
  font-style: normal
}

strong strong {
  font-weight: 400
}

/* DISABLED .keyseq {
  color: rgba(51, 51, 51, .8)
} */

kbd {
  /* DISABLED font-family: "Droid Sans Mono", "DejaVu Sans Mono", monospace; */
  font-family: monospace;
  display: inline-block;
  /* DISABLED color: rgba(0, 0, 0, .8); */
  font-size: .65em;
  line-height: calc(var(--asciidoc-line-height, 1.6) * 0.9);
  /* DISABLED background: #f7f7f7; */
  /* DISABLED border: 1px solid #ccc; */
  border: 1px solid;
  border-radius: 3px;
  /* DISABLED -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, .2), 0 0 0 .1em white inset; */
  /* DISABLED box-shadow: 0 1px 0 rgba(0, 0, 0, .2), 0 0 0 .1em #fff inset; */
  box-shadow: 0 1px 0, 0 0 0 .1em inset;
  margin: 0 .15em;
  padding: .2em .5em;
  vertical-align: middle;
  position: relative;
  top: -.1em;
  white-space: nowrap
}

.keyseq kbd:first-child {
  margin-left: 0
}

.keyseq kbd:last-child {
  margin-right: 0
}

/* DISABLED .menuseq,
.menuref {
  color: #000
} */

.menuseq b:not(.caret),
.menuref {
  font-weight: inherit
}

.menuseq {
  word-spacing: -.02em
}

.menuseq b.caret {
  font-size: 1.25em;
  line-height: calc(var(--asciidoc-line-height, 1.6) * 0.5);
}

.menuseq i.caret {
  font-weight: bold;
  text-align: center;
  width: .45em
}

b.button::before,
b.button::after {
  position: relative;
  top: -1px;
  font-weight: 400
}

b.button::before {
  content: "[";
  padding: 0 3px 0 2px
}

b.button::after {
  content: "]";
  padding: 0 2px 0 3px
}

p a>code:hover {
  /* DISABLED color: rgba(0, 0, 0, .9) */
  color: #1d4b8f
}

#header,
#content,
#footnotes,
#footer {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 62.5em;
  position: relative;
  padding-left: .9375em;
  padding-right: .9375em
}

#header::before,
#header::after,
#content::before,
#content::after,
#footnotes::before,
#footnotes::after,
#footer::before,
#footer::after {
  content: " ";
  display: table
}

#header::after,
#content::after,
#footnotes::after,
#footer::after {
  clear: both
}

#content {
  margin-top: 1.25em
}

#content::before {
  content: none
}

#header>h1:first-child {
  /* DISABLED color: rgba(0, 0, 0, .85); */
  margin-top: 2.25rem;
  margin-bottom: 0
}

#header>h1:first-child+#toc {
  margin-top: 8px;
  /* DISABLED border-top: 1px solid #dddddf */
  border-top: 1px solid;
}

#header>h1:only-child,
body.toc2 #header>h1:nth-last-child(2) {
  /* DISABLED border-bottom: 1px solid #dddddf; */
  border-bottom: 1px solid;
  padding-bottom: 8px
}

#header .details {
  /* DISABLED border-bottom: 1px solid #dddddf; */
  border-bottom: 1px solid;
  line-height: calc(var(--asciidoc-line-height, 1.6) * 0.9);
  padding-top: .25em;
  padding-bottom: .25em;
  padding-left: .25em;
  /* DISABLED color: rgba(0, 0, 0, .6); */
  display: flex;
  flex-flow: row wrap
}

#header .details span:first-child {
  margin-left: -.125em
}

/* DISABLED #header .details span.email a {
  color: rgba(0, 0, 0, .85)
} */

#header .details br {
  display: none
}

#header .details br+span::before {
  content: "\00a0\2013\00a0"
}

#header .details br+span.author::before {
  content: "\00a0\22c5\00a0";
  /* DISABLED color: rgba(0, 0, 0, .85) */
}

#header .details br+span#revremark::before {
  content: "\00a0|\00a0"
}

#header #revnumber {
  text-transform: capitalize
}

#header #revnumber::after {
  content: "\00a0"
}

#content>h1:first-child:not([class]) {
  /* DISABLED color: rgba(0, 0, 0, .85); */
  /* DISABLED border-bottom: 1px solid #dddddf; */
  border-bottom: 1px solid;
  padding-bottom: 8px;
  margin-top: 0;
  padding-top: 1rem;
  margin-bottom: 1.25rem
}

#toc {
  /* DISABLED border-bottom: 1px solid #e7e7e9; */
  border-bottom: 1px solid;
  padding-bottom: .5em
}

#toc>ul {
  margin-left: .125em
}

#toc ul.sectlevel0>li>a {
  font-style: italic
}

#toc ul.sectlevel0 ul.sectlevel1 {
  margin: .5em 0
}

#toc ul {
  /* DISABLED font-family: "Open Sans", "DejaVu Sans", sans-serif; */
  font-family: sans-serif;
  list-style-type: none
}

#toc li {
  line-height: calc(var(--asciidoc-line-height, 1.6) * 0.825);
  margin-top: .3334em
}

#toc a {
  text-decoration: none
}

#toc a:active {
  text-decoration: underline
}
/* ... */

